--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "workbench.activityBar.visible": true,
     "breadcrumbs.enabled": false,
     "workbench.editor.limit.value": 10,
-    "workbench.commandPalette.history": 50
+    "workbench.commandPalette.history": 50,
+    "workbench.statusBar.visible": true,
+    "editor.minimap.enabled": false,
+    "workbench.colorTheme": "Default Dark+"
 }
